WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188205
Long compiling JSC files should not be unified
https://bugs.webkit.org/show_bug.cgi?id=188205
Summary
Long compiling JSC files should not be unified
Keith Miller
Reported
2018-07-31 13:16:41 PDT
Long compiling JSC files should not be unified
Attachments
Patch
(9.33 KB, patch)
2018-07-31 13:19 PDT
,
Keith Miller
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2018-07-31 13:19:42 PDT
Created
attachment 346195
[details]
Patch
Keith Miller
Comment 2
2018-07-31 13:22:12 PDT
Committed
r234437
: <
https://trac.webkit.org/changeset/234437
>
Radar WebKit Bug Importer
Comment 3
2018-07-31 13:23:25 PDT
<
rdar://problem/42784347
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug