Long compiling JSC files should not be unified https://bugs.webkit.org/show_bug.cgi?id=188205

Reviewed by Saam Barati.

The DFGSpeculativeJIT and FTLLowerDFGToB3 files take a long time
to compile. Unifying them means touching anything in the same
bundle as those files takes a long time to incrementally build.
This patch separates those files so they build standalone.

* JavaScriptCore.xcodeproj/project.pbxproj:
* Sources.txt:
* dfg/DFGSpeculativeJIT64.cpp:

Canonical link: https://commits.webkit.org/203315@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234437 268f45cc-cd09-0410-ab3c-d52691b4dbfc